backend/server/frontend/public/styles/main.css
/* ... */
.w3-border-blue-grey,
.w3-hover-border-blue-grey:hover,
.w3-border-blue-gray,
.w3-hover-border-blue-gray:hover {
    border-color: #607d8b !important
}

.w3-border-green,
.w3-hover-border-green:hover {
    border-color: #4CAF50 !important
}

.w3-border-light-green,
.w3-hover-border-light-green:hover {
    border-color: #8bc34a !important
}

.w3-border-indigo,
.w3-hover-border-indigo:hover {
    border-color: #3f51b5 !important
}

.w3-border-khaki,
.w3-hover-border-khaki:hover {
    border-color: #f0e68c !important
}

.w3-border-lime,
.w3-hover-border-lime:hover {
    border-color: #cddc39 !important
}

.w3-border-orange,
.w3-hover-border-orange:hover {
    border-color: #ff9800 !important
}

.w3-border-deep-orange,
.w3-hover-border-deep-orange:hover {
    border-color: #ff5722 !important
}

.w3-border-pink,
.w3-hover-border-pink:hover {
    border-color: #e91e63 !important
}

.w3-border-purple,
.w3-hover-border-purple:hover {
    border-color: #9c27b0 !important
}

.w3-border-deep-purple,
.w3-hover-border-deep-purple:hover {
    border-color: #673ab7 !important
}

.w3-border-red,
.w3-hover-border-red:hover {
    border-color: #f44336 !important
}

.w3-border-sand,
.w3-hover-border-sand:hover {
    border-color: #fdf5e6 !important
}

.w3-border-teal,
.w3-hover-border-teal:hover {
    border-color: #009688 !important
}

.w3-border-yellow,
.w3-hover-border-yellow:hover {
    border-color: #ffeb3b !important
}

.w3-border-white,
.w3-hover-border-white:hover {
    border-color: #fff !important
}

.w3-border-black,
.w3-hover-border-black:hover {
    border-color: #000 !important
}

.w3-border-grey,
.w3-hover-border-grey:hover,
.w3-border-gray,
.w3-hover-border-gray:hover {
    border-color: #9e9e9e !important
}

.w3-border-light-grey,
.w3-hover-border-light-grey:hover,
.w3-border-light-gray,
.w3-hover-border-light-gray:hover {
    border-color: #f1f1f1 !important
}

.w3-border-dark-grey,
.w3-hover-border-dark-grey:hover,
.w3-border-dark-gray,
.w3-hover-border-dark-gray:hover {
    border-color: #616161 !important
}

.w3-border-pale-red,
.w3-hover-border-pale-red:hover {
    border-color: #ffe7e7 !important
}

.w3-border-pale-green,
.w3-hover-border-pale-green:hover {
    border-color: #e7ffe7 !important
}

.w3-border-pale-yellow,
.w3-hover-border-pale-yellow:hover {
    border-color: #ffffcc !important
}

.w3-border-pale-blue,
.w3-hover-border-pale-blue:hover {
    border-color: #e7ffff !important
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
}

.footer a {
    text-decoration: none;
    padding-left: 20px;
}

.footer a:hover {
    text-decoration: underline;
}

.linkNoDecoration a {
    text-decoration: none;
}

.linkNoDecoration a:hover {
    text-decoration: underline;
}

.form {
    position: relative;
    background: #FFFFFF;
    max-width: 360px;
    margin: 0 auto 100px;
    padding: 45px;
    text-align: center;

    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
}

.form input {
    outline: 0;
    background: #f2f2f2;
    width: 100%;
    border: 0;
    margin: 0 0 15px;
    padding: 15px;
    box-sizing: border-box;
    font-size: 14px;
}

.form input[type=radio] {
    width: 10%;
}

#animatedQR {
    margin-top: -65px;
    margin-bottom: -15px;
    width: 90%;
}

.form button {
    text-transform: uppercase;
    outline: 0;
    background: #2196F3;
    width: 100%;
    border: 0;
    padding: 15px;
    color: #FFFFFF;
    font-size: 14px;
    cursor: pointer;
}

.form button:hover,
.form button:active,
.form button:focus {
    background: rgb(0, 132, 255);
}

.red-response {
    color: red;
}


.loadingImage img {
    position: absolute;
    width: 100%;
    top: 325px;
    left: 0;
    z-index: 2;
}

.loadingImageBank img {
    position: absolute;
    width: 100%;
    top: 290px;
    left: 0;
    z-index: 2;
}

.loadingImageStripe img {
    position: absolute;
    width: 100%;
    top: 385px;
    left: 0;
    z-index: 2;
}

input:read-only {
    color: rgb(146, 146, 146);
    background-image: none;
}

.editBtn {
    margin-left: -36px;
    padding-right: 10px;
}

#forgotPassword {
    color: rgb(40, 40, 255);
}

#forgotPassword:hover {
    cursor: pointer;
}

.clickableText:hover {
    cursor: pointer;
}

.container input {
    opacity: 0;
    cursor: pointer;
}

/* Create a custom radio button */
.checkmark {
    position: absolute;
    top: 0px;
    left: 0px;
    height: 25px;
    width: 25px;
    background-color: #eee;
    border-radius: 50%;
}

/* On mouse-over, add a grey background color */
.container:hover input~.checkmark {
    background-color: #ccc;
}

/* When the radio button is checked, add a blue background */
.container input:checked~.checkmark {
    background-color: #2196F3;
}

/* Create the indicator (the dot/circle - hidden when not checked) */
.checkmark:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the indicator (dot/circle) when checked */
.container input:checked~.checkmark:after {
    display: block;
}

/* Style the indicator (dot/circle) */
.container .checkmark:after {
    top: 9px;
    left: 9px;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background: white;
}

.container {
    position: relative;
    padding-left: 30px;
    margin-bottom: 12px;
    cursor: pointer;
    font-size: 20px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.qrItem {
    float: left;
    width: 50%;
}

#closeEnlarged,
#closeSavedEnlarged {
    font-size: 20px;
}

#closeEnlarged:hover,
#closeSavedEnlarged:hover,
.smallQR:hover {
    cursor: pointer;
}

.myQR,
.savedQR img {
    image-rendering: pixelated;
}

#printEnlarged,
#deleteEnlarged,
#deleteYes,
#deleteNo,
#printSavedEnlarged,
#deleteSavedEnlarged,
#deleteYesNoSaved,
#deleteYesSaved,
#deleteNoSaved {
    cursor: pointer;
}
/* ... */

